# flymax-orchestrator

./: .env.example  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  README.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SAFETY_AND_ETHICS.md  SCHEMA.md  setup-gazebo.md
examples/: README.md  agri_survey_grid.json  guardian_perch_watch.json  inspection_tower_orbit.json  recce_v_formation.json  two_drone_patrol.json
flymax/: __init__.py  cli.py  orchestrator.py
flymax/backends/: __init__.py  base.py  crazyflie.py  dryrun.py  gazebo.py
flymax/missions/: __init__.py  schema.py
flymax/skills/: __init__.py  base.py  formation.py  geofence.py  rth.py  survey.py
schema/: mission.schema.json
tests/: test_examples_validate.py  test_planner_tooluse.py  test_schema_and_dryrun.py  test_skills_geofence.py  test_skills_geometry.py
